styles/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
}

i {
    vertical-align: middle;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-family: 'Quicksand', cursive;
    color: white;
}
.wrapper {
}
.header {
    text-align: center;
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0.15);
}
.ui_data {
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0.15);
}
.questioncount {
    float: right;
}
h1 {
    font-weight: 100;
    font-size: 6em;
}
h2 {
    font-size: 3em;
}
/*html {
    box-sizing: border-box;
    background-image: url("../images/Glacier_National_Park_sunset.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}*/
/*html {
    background: url("../images/Glacier_National_Park_sunset.jpg") no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}*/
body:before {
    content: "";
  display: block;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -10;
  background: url("../images/Glacier_National_Park_sunset.jpg") no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.score_question,
.statsboxinfo {
    font-size: 2em;
}
.finalscore {
    font-size: 1em;
}
.overlaycorrect,
.overlayincorrect,
.overlayscore {
    display: none;
    z-index: 1;
    text-align: center;
    position: absolute;
    top: 25%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.progress_wrap {
    position: relative;
    width: 100%;
    height: 2px;
}
.progress_bar {
    position: absolute;
    width: 0%;
    height: 100%;
    background-color: #fff;
}
footer {
    text-align: center;
    position: fixed;
   bottom: 0px;
   width: 100%;
}
.statsboxinfo {
    display: none;  /** toggle on in jQuery **/
}
.statsboxinfo,
.smallfooter {
    text-align: center;
}
.choices {
    text-align: center;
}
button {
    height: 65px;
    width: 200px;
    display: none;
    background: none;
    margin: 15px;
    border: 2px solid #fff;
    font-size: x-large;
    font-family: 'Jacques Francois', serif;
}
button:hover{
    border: 3px solid #fff;
    cursor: pointer;
}
.question {
    padding: 15px;
}
li {
    display: inline-block;
    margin: 0 50px;
}
.score_question {
    padding: 0 60px;
}
.questioncount,
.score {
    font-size: large;
}
@media screen and (max-width: 720px) {
    .wrapper {
    }
    button {
        width: 40%;
    }
    .clicktobegin {
        width: 50%;
    }
    li {
        margin: 0;
    }
    h1 {
        font-size: 4em;
    }
}

